--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
     <main class="main js-main" id="articles">
 
       <article class="article">
-        <header class="article__header">
+        <header class="article__header article__header-first">
           <p class="article__number">01</p>
           <h1 class="article__title">Projekt Antarktis</h1>
         </header>
@@ -58,36 +58,27 @@
         </div>
         <img src="./images/arctic-hero.jpg" alt="Artic landscape" class="article__image article__image--fullwidth">
         <p class="article__text">
-          BREMERHAVEN. In einem spannenden und lebendigen Interview berichten drei junge Bremerhavener
-          über ihr gemeinsames Antarktis-Projekt. Dennis Vogt, Tim David Müller-Zitzke
-          und Michael Ginzburg wollen die Öffentlichkeit auf sich aufmerksam machen
-          und wagen daher ein einzigartiges Experiment. Sie wollen Mut zum Leben
-          und eigenen Wertvorstellungen machen und gehen dafür einen ungewöhnlichen
-          Weg. »Es muss nicht immer ein sogenannter »Standard-Lebenslauf“ vorhanden
-          sein, wo es nur auf den NC und einen lückenlosen Zeitraum ankommt. Es geht
-          auch anders!« Diese Aussage macht neugierig und ich frage nach: »Natürlich
-          ist das Projekt Antarktis auch für die anstehende Bachelorarbeit hilfreich,
-          es ist für uns aber nicht der Hauptanlass unserer Challenge«, meinen die
-          Abenteurer. »Unerreichbar und über 14.000 km weit weg stellt sie uns vor
-          eine große Herausforderung und grenzt uns von der Norm ab. Es ist ein Lebenstraum
-          für uns, diese Landschaften auch mal mit eigenen Augen zu sehen und andere
-          ungewöhnliche Wege zu gehen.« Durch einen Dokumentarfilm können alle drei
-          Filmemacher ihrer besonderen Leidenschaft nachgehen und Grenzerfahrungen
-          besonders gut darstellen. Der Polarforscher und Expeditionsleiter Michael
-          Ginzburg kann über Erfahrungen aus der Polarforschung berichten und so
-          entstand relativ schnell die Idee, ein Filmprojekt über die Antarktis zu
-          drehen.
+          BREMERHAVEN. In einem spannenden und lebendigen Interview berichten drei junge Bremerhavener über ihr gemeinsames Antarktis-Projekt.
+          Dennis Vogt, Tim David Müller-Zitzke und Michael Ginzburg wollen die Öffentlichkeit auf sich aufmerksam machen
+          und wagen daher ein einzigartiges Experiment. Sie wollen Mut zum Leben und eigenen Wertvorstellungen machen und
+          gehen dafür einen ungewöhnlichen Weg. »Es muss nicht immer ein sogenannter »Standard-Lebenslauf“ vorhanden sein,
+          wo es nur auf den NC und einen lückenlosen Zeitraum ankommt. Es geht auch anders!« Diese Aussage macht neugierig
+          und ich frage nach: »Natürlich ist das Projekt Antarktis auch für die anstehende Bachelorarbeit hilfreich, es ist
+          für uns aber nicht der Hauptanlass unserer Challenge«, meinen die Abenteurer. »Unerreichbar und über 14.000 km
+          weit weg stellt sie uns vor eine große Herausforderung und grenzt uns von der Norm ab. Es ist ein Lebenstraum für
+          uns, diese Landschaften auch mal mit eigenen Augen zu sehen und andere ungewöhnliche Wege zu gehen.« Durch einen
+          Dokumentarfilm können alle drei Filmemacher ihrer besonderen Leidenschaft nachgehen und Grenzerfahrungen besonders
+          gut darstellen. Der Polarforscher und Expeditionsleiter Michael Ginzburg kann über Erfahrungen aus der Polarforschung
+          berichten und so entstand relativ schnell die Idee, ein Filmprojekt über die Antarktis zu drehen.
         </p>
         <h2 class="article__subtitle">Mit dem Schiff drei Wochen über Argentinien in den Südlichen Ozean zur Antarktis.</h2>
         <img src="./images/pengwings.jpg" alt="Penguins" class="article__image">
-        <p class="article__text">»Unerreichbar und über 14.000 km weit weg stellt sie uns vor eine große Herausforderung
-          und grenzt uns von der Norm ab. Es ist ein Lebenstraum für uns, diese Landschaften
-          auch mal mit eigenen Augen zu sehen und andere ungewöhnliche Wege zu gehen.«
-          Durch einen Dokumentarfilm können alle drei Filmemacher ihrer besonderen
-          Leidenschaft nachgehen und Grenzerfahrungen besonders gut darstellen. Der
-          Polarforscher und Expeditionsleiter Michael Ginzburg kann über Erfahrungen
-          aus der Polarforschung berichten und so entstand relativ schnell die Idee,
-          ein Filmprojekt über die Antarktis zu drehen.
+        <p class="article__text">»Unerreichbar und über 14.000 km weit weg stellt sie uns vor eine große Herausforderung und grenzt uns von der Norm
+          ab. Es ist ein Lebenstraum für uns, diese Landschaften auch mal mit eigenen Augen zu sehen und andere ungewöhnliche
+          Wege zu gehen.« Durch einen Dokumentarfilm können alle drei Filmemacher ihrer besonderen Leidenschaft nachgehen
+          und Grenzerfahrungen besonders gut darstellen. Der Polarforscher und Expeditionsleiter Michael Ginzburg kann über
+          Erfahrungen aus der Polarforschung berichten und so entstand relativ schnell die Idee, ein Filmprojekt über die
+          Antarktis zu drehen.
         </p>
       </article>
 
@@ -106,39 +97,28 @@
         </div>
         <img src="./images/cyber-hero.jpg" alt="A robot" class="article__image article__image--fullwidth">
         <p class="article__text">
-          BREMERHAVEN. In einem spannenden und lebendigen Interview berichten drei junge Bremerhavener
-          über ihr gemeinsames Antarktis-Projekt. Dennis Vogt, Tim David Müller-Zitzke
-          und Michael Ginzburg wollen die Öffentlichkeit auf sich aufmerksam machen
-          und wagen daher ein einzigartiges Experiment. Sie wollen Mut zum Leben
-          und eigenen Wertvorstellungen machen und gehen dafür einen ungewöhnlichen
-          Weg. »Es muss nicht immer ein sogenannter »Standard-Lebenslauf“ vorhanden
-          sein, wo es nur auf den NC und einen lückenlosen Zeitraum ankommt. Es geht
-          auch anders!« Diese Aussage macht neugierig und ich frage nach: »Natürlich
-          ist das Projekt Antarktis auch für die anstehende Bachelorarbeit hilfreich,
-          es ist für uns aber nicht der Hauptanlass unserer Challenge«, meinen die
-          Abenteurer. »Unerreichbar und über 14.000 km weit weg stellt sie uns vor
-          eine große Herausforderung und grenzt uns von der Norm ab. Es ist ein Lebenstraum
-          für uns, diese Landschaften auch mal mit eigenen Augen zu sehen und andere
-          ungewöhnliche Wege zu gehen.« Durch einen Dokumentarfilm können alle drei
-          Filmemacher ihrer besonderen Leidenschaft nachgehen und Grenzerfahrungen
-          besonders gut darstellen. Der Polarforscher und Expeditionsleiter Michael
-          Ginzburg kann über Erfahrungen aus der Polarforschung berichten und so
-          entstand relativ schnell die Idee, ein Filmprojekt über die Antarktis zu
-          drehen.
+          BREMERHAVEN. In einem spannenden und lebendigen Interview berichten drei junge Bremerhavener über ihr gemeinsames Antarktis-Projekt.
+          Dennis Vogt, Tim David Müller-Zitzke und Michael Ginzburg wollen die Öffentlichkeit auf sich aufmerksam machen
+          und wagen daher ein einzigartiges Experiment. Sie wollen Mut zum Leben und eigenen Wertvorstellungen machen und
+          gehen dafür einen ungewöhnlichen Weg. »Es muss nicht immer ein sogenannter »Standard-Lebenslauf“ vorhanden sein,
+          wo es nur auf den NC und einen lückenlosen Zeitraum ankommt. Es geht auch anders!« Diese Aussage macht neugierig
+          und ich frage nach: »Natürlich ist das Projekt Antarktis auch für die anstehende Bachelorarbeit hilfreich, es ist
+          für uns aber nicht der Hauptanlass unserer Challenge«, meinen die Abenteurer. »Unerreichbar und über 14.000 km
+          weit weg stellt sie uns vor eine große Herausforderung und grenzt uns von der Norm ab. Es ist ein Lebenstraum für
+          uns, diese Landschaften auch mal mit eigenen Augen zu sehen und andere ungewöhnliche Wege zu gehen.« Durch einen
+          Dokumentarfilm können alle drei Filmemacher ihrer besonderen Leidenschaft nachgehen und Grenzerfahrungen besonders
+          gut darstellen. Der Polarforscher und Expeditionsleiter Michael Ginzburg kann über Erfahrungen aus der Polarforschung
+          berichten und so entstand relativ schnell die Idee, ein Filmprojekt über die Antarktis zu drehen.
         </p>
         <img src="./images/nutella.jpg" alt="Uniquely designed nutella packaging" class="article__image">
         <h2 class="article__subtitle">Mit dem Schiff drei Wochen über Argentinien in den Südlichen Ozean zur Antarktis.</h2>
-        <p class="article__text">»Natürlich ist das Projekt Antarktis auch für die anstehende Bachelorarbeit
-          hilfreich, es ist für uns aber nicht der Hauptanlass unserer Challenge«,
-          meinen die Abenteurer. »Unerreichbar und über 14.000 km weit weg stellt
-          sie uns vor eine große Herausforderung und grenzt uns von der Norm ab.
-          Es ist ein Lebenstraum für uns, diese Landschaften auch mal mit eigenen
-          Augen zu sehen und andere ungewöhnliche Wege zu gehen.« Durch einen Dokumentarfilm
-          können alle drei Filmemacher ihrer besonderen Leidenschaft nachgehen und
-          Grenzerfahrungen besonders gut darstellen. Der Polarforscher und Expeditionsleiter
-          Michael Ginzburg kann über Erfahrungen aus der Polarforschung berichten
-          und so entstand relativ schnell die Idee, ein Filmprojekt über die Antarktis
-          zu drehen.
+        <p class="article__text">»Natürlich ist das Projekt Antarktis auch für die anstehende Bachelorarbeit hilfreich, es ist für uns aber nicht
+          der Hauptanlass unserer Challenge«, meinen die Abenteurer. »Unerreichbar und über 14.000 km weit weg stellt sie
+          uns vor eine große Herausforderung und grenzt uns von der Norm ab. Es ist ein Lebenstraum für uns, diese Landschaften
+          auch mal mit eigenen Augen zu sehen und andere ungewöhnliche Wege zu gehen.« Durch einen Dokumentarfilm können
+          alle drei Filmemacher ihrer besonderen Leidenschaft nachgehen und Grenzerfahrungen besonders gut darstellen. Der
+          Polarforscher und Expeditionsleiter Michael Ginzburg kann über Erfahrungen aus der Polarforschung berichten und
+          so entstand relativ schnell die Idee, ein Filmprojekt über die Antarktis zu drehen.
         </p>
       </article>
     </main>
