--- a/src/index.html
+++ b/src/index.html
@@ -47,9 +47,8 @@
       <article class="article">
         <header class="article__header article__header-first">
           <p class="article__number">01</p>
-          <h1 class="article__title">Projekt Antarktis</h1>
         </header>
-
+        <h1 class="article__title">Projekt Antarktis</h1>
         <div class="article__teaser">
           <p class="article__teaser-text">
             Drei junge Filmemacher berichten über ihre Grenzerfahrungen für ein gemeinsames Ziel.
@@ -93,10 +92,10 @@
 
       <article class="article">
 
-        <header class="article__header">
+        <header class="article__header article__header-first">
           <p class="article__number">02</p>
-          <h1 class="article__title">Wie KI die Designwelt ändert</h1>
         </header>
+        <h1 class="article__title">Wie KI die Designwelt ändert</h1>
 
         <div class="article__teaser">
           <p class="article__teaser-text">
