--- a/src/index.html
+++ b/src/index.html
@@ -49,45 +49,8 @@
     <main class="main js-main" id="articles">
 
       <article class="article">
-        <header class="article__header article__header-first">
-          <p class="article__number">01</p>
-        </header>
-        <h1 class="article__title">Projekt Antarktis</h1>
-        <div class="article__teaser">
-          <p class="article__teaser-text">
-            Drei junge Filmemacher berichten über ihre Grenzerfahrungen für ein gemeinsames Ziel.
-          </p>
-          <p class="article__teaser-author">Von Janina Helms.</p>
-        </div>
-        <img src="./images/arctic-hero.jpg" alt="Artic landscape" class="article__image article__image--fullwidth">
-        <p class="article__text">
-          BREMERHAVEN. In einem spannenden und lebendigen Interview berichten drei junge Bremerhavener über ihr gemeinsames Antarktis-Projekt.
-          Dennis Vogt, Tim David Müller-Zitzke und Michael Ginzburg wollen die Öffentlichkeit auf sich aufmerksam machen
-          und wagen daher ein einzigartiges Experiment. Sie wollen Mut zum Leben und eigenen Wertvorstellungen machen und
-          gehen dafür einen ungewöhnlichen Weg. »Es muss nicht immer ein sogenannter »Standard-Lebenslauf“ vorhanden sein,
-          wo es nur auf den NC und einen lückenlosen Zeitraum ankommt. Es geht auch anders!« Diese Aussage macht neugierig
-          und ich frage nach: »Natürlich ist das Projekt Antarktis auch für die anstehende Bachelorarbeit hilfreich, es ist
-          für uns aber nicht der Hauptanlass unserer Challenge«, meinen die Abenteurer. »Unerreichbar und über 14.000 km
-          weit weg stellt sie uns vor eine große Herausforderung und grenzt uns von der Norm ab. Es ist ein Lebenstraum für
-          uns, diese Landschaften auch mal mit eigenen Augen zu sehen und andere ungewöhnliche Wege zu gehen.« Durch einen
-          Dokumentarfilm können alle drei Filmemacher ihrer besonderen Leidenschaft nachgehen und Grenzerfahrungen besonders
-          gut darstellen. Der Polarforscher und Expeditionsleiter Michael Ginzburg kann über Erfahrungen aus der Polarforschung
-          berichten und so entstand relativ schnell die Idee, ein Filmprojekt über die Antarktis zu drehen.
-        </p>
-        <h2 class="article__subtitle">Mit dem Schiff drei Wochen über Argentinien in den Südlichen Ozean zur Antarktis.</h2>
-        <img src="./images/pengwings.jpg" alt="Penguins" class="article__image">
-        <p class="article__text">»Unerreichbar und über 14.000 km weit weg stellt sie uns vor eine große Herausforderung und grenzt uns von der Norm
-          ab. Es ist ein Lebenstraum für uns, diese Landschaften auch mal mit eigenen Augen zu sehen und andere ungewöhnliche
-          Wege zu gehen.« Durch einen Dokumentarfilm können alle drei Filmemacher ihrer besonderen Leidenschaft nachgehen
-          und Grenzerfahrungen besonders gut darstellen. Der Polarforscher und Expeditionsleiter Michael Ginzburg kann über
-          Erfahrungen aus der Polarforschung berichten und so entstand relativ schnell die Idee, ein Filmprojekt über die
-          Antarktis zu drehen.
-        </p>
-      </article>
 
-      <article class="article">
-
-        <header class="article__header article__header-first">
+        <header class="article__header">
           <p class="article__number">02</p>
         </header>
         <h1 class="article__title">Wie KI die Designwelt ändert</h1>
@@ -125,6 +88,20 @@
         </p>
       </article>
       <article id="test"></article>
+      <article class="article" id="antarktis">
+
+      </article>
+      <article class="article"></article>
+      <article class="article"></article>
+      <article class="article"></article>
+      <article class="article"></article>
+      <article class="article"></article>
+      <article class="article"></article>
+      <article class="article"></article>
+      <article class="article"></article>
+      <article class="article"></article>
+      <article class="article"></article>
+      <article class="article"></article>
     </main>
 
   </body>
