load article implemented

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,21 @@
       </a>
     </div>
 
+    <div class="article-selection">
+      <button>Artikel 1</button>
+      <button>Artikel 2</button>
+      <button>Artikel 3</button>
+      <button>Artikel 4</button>
+      <button>Artikel 5</button>
+      <button>Artikel 6</button>
+      <button>Artikel 7</button>
+      <button>Artikel 8</button>
+      <button>Artikel 9</button>
+      <button>Artikel 10</button>
+      <button>Artikel 11</button>
+      <button>Artikel 12</button>
+    </div>
+
     <header class="header">
       <button class="header__hamburger hamburger hamburger--spring js-hamburger" type="button">
         <span class="hamburger-box">
@@ -48,18 +63,18 @@
 
     <main class="main js-main" id="articles">
 
-      <article class="article" id="seemann"></article>
-      <article class="article" id="graffiti"></article>
-      <article class="article" id="apollo"></article>
-      <article class="article" id="kunst"></article>
-      <article class="article" id="nachbar"></article>
-      <article class="article" id="medien"></article>
-      <article class="article" id="stern"></article>
-      <article class="article" id="melanka"></article>
-      <article class="article" id="österreich"></article>
-      <article class="article" id="antarktis"></article>
-      <article class="article" id="ki"></article>
-      <article class="article" id="bertram"></article>
+      <article class="article" data-loaded="false" id="seemann"></article>
+      <article class="article" data-loaded="false" id="graffiti"></article>
+      <article class="article" data-loaded="false" id="apollo"></article>
+      <article class="article" data-loaded="false" id="kunst"></article>
+      <article class="article" data-loaded="false" id="nachbar"></article>
+      <article class="article" data-loaded="false" id="medien"></article>
+      <article class="article" data-loaded="false" id="stern"></article>
+      <article class="article" data-loaded="false" id="melanka"></article>
+      <article class="article" data-loaded="false" id="österreich"></article>
+      <article class="article" data-loaded="false" id="antarktis"></article>
+      <article class="article" data-loaded="false" id="ki"></article>
+      <article class="article" data-loaded="false" id="bertram"></article>
 
     </main>
 
