major cleanup, rewrite of image loading, comments added

--- a/index.html
+++ b/index.html
@@ -6,17 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>sleak</title>
-    <script src="./main.js" async defer></script>
+    <script src="./src/main.js" async defer></script>
   </head>
 
   <body>
 
     <div class="splash js-splash">
-      <img class="splash__logo" src="./images/sleak-logo.svg" alt="sleak magazine">
-    </div>
-
-    <div class="article-list">
-      <p class="article-select">01</p>
+      <img class="splash__logo" src="./src/assets/images/sleak-logo.svg" alt="sleak magazine">
     </div>
 
     <div class="menu js-menu">
@@ -34,23 +30,23 @@
         </ul>
       </nav>
       <a href="/#" class="js-menu__item">
-        <img class="menu__image" src="./images/sleak-logo.svg" alt="Start" role="button">
+        <img class="menu__image" src="./src/assets/images/sleak-logo.svg" alt="Start" role="button">
       </a>
     </div>
 
     <div class="article-selection">
-      <button>Artikel 1</button>
-      <button>Artikel 2</button>
-      <button>Artikel 3</button>
-      <button>Artikel 4</button>
-      <button>Artikel 5</button>
-      <button>Artikel 6</button>
-      <button>Artikel 7</button>
-      <button>Artikel 8</button>
-      <button>Artikel 9</button>
-      <button>Artikel 10</button>
-      <button>Artikel 11</button>
-      <button>Artikel 12</button>
+      <button class="article-selection__button" data-target="1">Artikel 1</button>
+      <button class="article-selection__button" data-target="2">Artikel 2</button>
+      <button class="article-selection__button" data-target="3">Artikel 3</button>
+      <button class="article-selection__button" data-target="4">Artikel 4</button>
+      <button class="article-selection__button" data-target="5">Artikel 5</button>
+      <button class="article-selection__button" data-target="6">Artikel 6</button>
+      <button class="article-selection__button" data-target="7">Artikel 7</button>
+      <button class="article-selection__button" data-target="8">Artikel 8</button>
+      <button class="article-selection__button" data-target="9">Artikel 9</button>
+      <button class="article-selection__button" data-target="10">Artikel 10</button>
+      <button class="article-selection__button" data-target="11">Artikel 11</button>
+      <button class="article-selection__button" data-target="12">Artikel 12</button>
     </div>
 
     <header class="header">
