--- a/index.html
+++ b/index.html
@@ -35,18 +35,54 @@
     </div>
 
     <div class="article-selection">
-      <button class="article-selection__button" data-target="1">Artikel 1</button>
-      <button class="article-selection__button" data-target="2">Artikel 2</button>
-      <button class="article-selection__button" data-target="3">Artikel 3</button>
-      <button class="article-selection__button" data-target="4">Artikel 4</button>
-      <button class="article-selection__button" data-target="5">Artikel 5</button>
-      <button class="article-selection__button" data-target="6">Artikel 6</button>
-      <button class="article-selection__button" data-target="7">Artikel 7</button>
-      <button class="article-selection__button" data-target="8">Artikel 8</button>
-      <button class="article-selection__button" data-target="9">Artikel 9</button>
-      <button class="article-selection__button" data-target="10">Artikel 10</button>
-      <button class="article-selection__button" data-target="11">Artikel 11</button>
-      <button class="article-selection__button" data-target="12">Artikel 12</button>
+      <button class="article-selection__button" data-target="1">
+        <span>01</span>
+        <span>Zwischen Seemannsgarn und Strandgut</span>
+      </button>
+      <button class="article-selection__button" data-target="2">
+        <span>02</span>
+        <span>Bringt Farbe in die Stadt!</span>
+      </button>
+      <button class="article-selection__button" data-target="3">
+        <span>03</span>
+        <span>Vorhang auf!</span>
+      </button>
+      <button class="article-selection__button" data-target="4">
+        <span>04</span>
+        <span>Kunst | Design</span>
+      </button>
+      <button class="article-selection__button" data-target="5">
+        <span>05</span>
+        <span>Back to Print</span>
+      </button>
+      <button class="article-selection__button" data-target="6">
+        <span>06</span>
+        <span>Digitale Medien in Bremen und Bremerhaven</span>
+      </button>
+      <button class="article-selection__button" data-target="7">
+        <span>07</span>
+        <span>Hinter den Kulissen</span>
+      </button>
+      <button class="article-selection__button" data-target="8">
+        <span>08</span>
+        <span>Moin Melanka!</span>
+      </button>
+      <button class="article-selection__button" data-target="9">
+        <span>09</span>
+        <span>Österreichs Newcomer Mihael Kobas</span>
+      </button>
+      <button class="article-selection__button" data-target="10">
+        <span>10</span>
+        <span>Projekt Antarktis</span>
+      </button>
+      <button class="article-selection__button" data-target="11">
+        <span>11</span>
+        <span>Wie KI die Designwelt ändert</span>
+      </button>
+      <button class="article-selection__button" data-target="12">
+        <span>12</span>
+        <span>Axel Bertram</span>
+      </button>
     </div>
 
     <header class="header">
@@ -67,7 +103,7 @@
       <article class="article" data-loaded="false" id="medien"></article>
       <article class="article" data-loaded="false" id="stern"></article>
       <article class="article" data-loaded="false" id="melanka"></article>
-      <article class="article" data-loaded="false" id="österreich"></article>
+      <article class="article" data-loaded="false" id="oesterreich"></article>
       <article class="article" data-loaded="false" id="antarktis"></article>
       <article class="article" data-loaded="false" id="ki"></article>
       <article class="article" data-loaded="false" id="bertram"></article>
