added basic transitioning

--- a/index.html
+++ b/index.html
@@ -35,54 +35,57 @@
     </div>
 
     <div class="article-selection">
-      <button class="article-selection__button" data-target="1">
-        <span>01</span>
-        <span>Zwischen Seemannsgarn und Strandgut</span>
-      </button>
-      <button class="article-selection__button" data-target="2">
-        <span>02</span>
-        <span>Bringt Farbe in die Stadt!</span>
-      </button>
-      <button class="article-selection__button" data-target="3">
-        <span>03</span>
-        <span>Vorhang auf!</span>
-      </button>
-      <button class="article-selection__button" data-target="4">
-        <span>04</span>
-        <span>Kunst | Design</span>
-      </button>
-      <button class="article-selection__button" data-target="5">
-        <span>05</span>
-        <span>Back to Print</span>
-      </button>
-      <button class="article-selection__button" data-target="6">
-        <span>06</span>
-        <span>Digitale Medien in Bremen und Bremerhaven</span>
-      </button>
-      <button class="article-selection__button" data-target="7">
-        <span>07</span>
-        <span>Hinter den Kulissen</span>
-      </button>
-      <button class="article-selection__button" data-target="8">
-        <span>08</span>
-        <span>Moin Melanka!</span>
-      </button>
-      <button class="article-selection__button" data-target="9">
-        <span>09</span>
-        <span>Österreichs Newcomer Mihael Kobas</span>
-      </button>
-      <button class="article-selection__button" data-target="10">
-        <span>10</span>
-        <span>Projekt Antarktis</span>
-      </button>
-      <button class="article-selection__button" data-target="11">
-        <span>11</span>
-        <span>Wie KI die Designwelt ändert</span>
-      </button>
-      <button class="article-selection__button" data-target="12">
-        <span>12</span>
-        <span>Axel Bertram</span>
-      </button>
+      <div class="article-selection__inner">
+        <button class="article-selection__button" data-target="1">
+          <span class="article-selection__button-num">01</span>
+          <span class="article-selection__button-text">Zwischen Seemannsgarn und Strandgut</span>
+        </button>
+        <button class="article-selection__button" data-target="2">
+          <span class="article-selection__button-num">02</span>
+          <span class="article-selection__button-text">Bringt Farbe in die Stadt!</span>
+        </button>
+        <button class="article-selection__button" data-target="3">
+          <span class="article-selection__button-num">03</span>
+          <span class="article-selection__button-text">Vorhang auf!</span>
+        </button>
+        <button class="article-selection__button" data-target="4">
+          <span class="article-selection__button-num">04</span>
+          <span class="article-selection__button-text">Kunst | Design</span>
+        </button>
+        <button class="article-selection__button" data-target="5">
+          <span class="article-selection__button-num">05</span>
+          <span class="article-selection__button-text">Back to Print</span>
+        </button>
+        <button class="article-selection__button" data-target="6">
+          <span class="article-selection__button-num">06</span>
+          <span class="article-selection__button-text">Digitale Medien in Bremen und Bremerhaven</span>
+        </button>
+        <button class="article-selection__button" data-target="7">
+          <span class="article-selection__button-num">07</span>
+          <span class="article-selection__button-text">Hinter den Kulissen</span>
+        </button>
+        <button class="article-selection__button" data-target="8">
+          <span class="article-selection__button-num">08</span>
+          <span class="article-selection__button-text">Moin Melanka!</span>
+        </button>
+        <button class="article-selection__button" data-target="9">
+          <span class="article-selection__button-num">09</span>
+          <span class="article-selection__button-text">Österreichs Newcomer Mihael Kobas</span>
+        </button>
+        <button class="article-selection__button" data-target="10">
+          <span class="article-selection__button-num">10</span>
+          <span class="article-selection__button-text">Projekt Antarktis</span>
+        </button>
+        <button class="article-selection__button" data-target="11">
+          <span class="article-selection__button-num">11</span>
+          <span class="article-selection__button-text">Wie KI die Designwelt ändert</span>
+        </button>
+        <button class="article-selection__button" data-target="12">
+          <span class="article-selection__button-num">12</span>
+          <span class="article-selection__button-text">Axel Bertram</span>
+        </button>
+      </div>
+
     </div>
 
     <header class="header">
