--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </button>
         <button class="article-selection__button" data-target="3">
           <span class="article-selection__button-num">03</span>
-          <span class="article-selection__button-text">Vorhang auf!</span>
+          <span class="article-selection__button-text">Film ab Bheaven</span>
         </button>
         <button class="article-selection__button" data-target="4">
           <span class="article-selection__button-num">04</span>
@@ -58,7 +58,7 @@
         </button>
         <button class="article-selection__button" data-target="6">
           <span class="article-selection__button-num">06</span>
-          <span class="article-selection__button-text">Digitale Medien in Bremen und Bremerhaven</span>
+          <span class="article-selection__button-text">Digitale Medien</span>
         </button>
         <button class="article-selection__button" data-target="7">
           <span class="article-selection__button-num">07</span>
