--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav class="menu__nav">
         <ul class="menu__list">
           <li>
-            <a href="#" class="js-menu__item">Das Team</a>
+            <a href="./team.html" class="js-menu__item">Das Team</a>
           </li>
           <li>
             <a href="#" class="js-menu__item">Shop</a>
