--- a/team.html
+++ b/team.html
@@ -31,49 +31,56 @@
 
     <div class="team-selection">
       <div class="team-selection__inner">
-        <button class="team-selection__button" data-target="1">
-          <span class="team-selection__button-num">01</span>
-          <span class="team-selection__button-text">Zwischen Seemannsgarn und Strandgut</span>
+        <button class="team-selection__button" data-target="felix">
+          <span class="team-selection__button-num">Felix</span>
         </button>
-        <button class="team-selection__button" data-target="2">
-          <span class="team-selection__button-num">02</span>
-          <span class="team-selection__button-text">Bringt Farbe in die Stadt!</span>
+        <button class="team-selection__button" data-target="michaela">
+          <span class="team-selection__button-num">Michaela</span>
         </button>
-        <button class="team-selection__button" data-target="3">
-          <span class="team-selection__button-num">03</span>
-          <span class="team-selection__button-text">Vorhang auf!</span>
+        <button class="team-selection__button" data-target="viktoria">
+          <span class="team-selection__button-num">Viktoria</span>
         </button>
-        <button class="team-selection__button" data-target="4">
-          <span class="team-selection__button-num">04</span>
-          <span class="team-selection__button-text">Kunst | Design</span>
+        <button class="team-selection__button" data-target="max">
+          <span class="team-selection__button-num">Max</span>
         </button>
-        <button class="team-selection__button" data-target="5">
-          <span class="team-selection__button-num">05</span>
-          <span class="team-selection__button-text">Back to Print</span>
+        <button class="team-selection__button" data-target="jennie">
+          <span class="team-selection__button-num">Jennie</span>
         </button>
-        <button class="team-selection__button" data-target="6">
-          <span class="team-selection__button-num">06</span>
-          <span class="team-selection__button-text">Digitale Medien in Bremen und Bremerhaven</span>
+        <button class="team-selection__button" data-target="julien">
+          <span class="team-selection__button-num">Julien</span>
         </button>
-        <button class="team-selection__button" data-target="7">
-          <span class="team-selection__button-num">07</span>
-          <span class="team-selection__button-text">Moin Melanka!</span>
+        <button class="team-selection__button" data-target="jonas">
+          <span class="team-selection__button-num">Jonas</span>
         </button>
-        <button class="team-selection__button" data-target="8">
-          <span class="team-selection__button-num">08</span>
-          <span class="team-selection__button-text">Österreichs Newcomer Mihael Kobas</span>
+        <button class="team-selection__button" data-target="marvin">
+          <span class="team-selection__button-num">Marvin</span>
         </button>
-        <button class="team-selection__button" data-target="9">
-          <span class="team-selection__button-num">09</span>
-          <span class="team-selection__button-text">Projekt Antarktis</span>
+        <button class="team-selection__button" data-target="rieke">
+          <span class="team-selection__button-num">Rieke</span>
         </button>
-        <button class="team-selection__button" data-target="10">
-          <span class="team-selection__button-num">10</span>
-          <span class="team-selection__button-text">Wie KI die Designwelt ändert</span>
+        <button class="team-selection__button" data-target="lena">
+          <span class="team-selection__button-num">Lena</span>
         </button>
-        <button class="team-selection__button" data-target="11">
-          <span class="team-selection__button-num">11</span>
-          <span class="team-selection__button-text">Axel Bertram</span>
+        <button class="team-selection__button" data-target="sevda">
+          <span class="team-selection__button-num">Sevda</span>
+        </button>
+        <button class="team-selection__button" data-target="judith">
+          <span class="team-selection__button-num">Judith</span>
+        </button>
+        <button class="team-selection__button" data-target="lia">
+          <span class="team-selection__button-num">Lia</span>
+        </button>
+        <button class="team-selection__button" data-target="nadine">
+          <span class="team-selection__button-num">Nadine</span>
+        </button>
+        <button class="team-selection__button" data-target="janina">
+          <span class="team-selection__button-num">Janina</span>
+        </button>
+        <button class="team-selection__button" data-target="axel">
+          <span class="team-selection__button-num">Axel</span>
+        </button>
+        <button class="team-selection__button" data-target="andreas">
+          <span class="team-selection__button-num">Andreas</span>
         </button>
       </div>
 
@@ -87,5 +94,117 @@
       </button>
     </header>
   </body>
+
+  <main>
+    <article class="team-member" id="felix">
+      <header class="article__header">
+        <p class="team__name">Felix</p>
+      </header>
+      <p class="article__teaser-text">Leidenschaftlicher Fotograph, begeisterter Kitesurfer – Felix kommt viel herum, insbesonders wenn er mit seinem selbstgebauten
+      VW-Bus auf Reisen geht.</p>
+    </article>
+    <article class="team-member" id="michaela">
+      <header class="article__header">
+        <p class="team__name">Michaela</p>
+      </header>
+      <p class="article__teaser-text">Michaela ist unser nordischer Ruhepol. Auch wenn die Diskussion mal hitziger wird, Michaela behält die Ruhe weg. Sie ist
+      immer freundlich und hilfsbereit - auf Michaela kann man zählen.</p>
+    </article>
+    <article class="team-member" id="viktoria">
+      <header class="article__header">
+        <p class="team__name">Viktoria</p>
+      </header>
+      <p class="article__teaser-text">Viktoria eine sleeke Designerin. Alles muss minimalistisch und Gelb sein. FIKA!</p>
+    </article>
+    <article class="team-member" id="max">
+      <header class="article__header">
+        <p class="team__name">Max</p>
+      </header>
+      <p class="article__teaser-text">Seine Devise: Schlicht und viel Weißraum. Designtechnisch minimalistisch veranlagt, hat er einen großen Teil zum Grundgerüst
+      des Magazins beigetragen.</p>
+    </article>
+    <article class="team-member" id="jennie">
+      <header class="article__header">
+        <p class="team__name">Jennie</p>
+      </header>
+      <p class="article__teaser-text">
+         Elegant, trotzdem zeitgemäß und auf jeden Fall schick mag es Jennie. Sie hegt eine Vorliebe für Pastellfarben und schlichte
+        Typografie und erfreut uns mit ihrem Interview einer Fotodesignerin. Privat heißt sie auf Reisen gerne das Fremde willkommen
+        und findet, ob bei einem Schnack mit Freunden oder einer Präsentation in der Uni immer die richtigen Worte.
+      </p>
+    </article>
+    <article class="team-member" id="julien">
+      <header class="article__header">
+        <p class="team__name">Julien</p>
+      </header>
+      <p class="article__teaser-text"></p>
+    </article>
+    <article class="team-member" id="jonas">
+      <header class="article__header">
+        <p class="team__name">Jonas</p>
+      </header>
+      <p class="article__teaser-text"></p>
+    </article>
+    <article class="team-member" id="marvin">
+      <header class="article__header">
+        <p class="team__name">Marvin</p>
+      </header>
+      <p class="article__teaser-text"></p>
+    </article>
+    <article class="team-member" id="rieke">
+      <header class="article__header">
+        <p class="team__name">Rieke</p>
+      </header>
+      <p class="article__teaser-text"></p>
+    </article>
+    <article class="team-member" id="lena">
+      <header class="article__header">
+        <p class="team__name">Lena</p>
+      </header>
+      <p class="article__teaser-text"></p>
+    </article>
+    <article class="team-member" id="sevda">
+      <header class="article__header">
+        <p class="team__name">Sevda</p>
+      </header>
+      <p class="article__teaser-text"></p>
+    </article>
+    <article class="team-member" id="judith">
+      <header class="article__header">
+        <p class="team__name">Judith</p>
+      </header>
+      <p class="article__teaser-text"></p>
+    </article>
+    <article class="team-member" id="lia">
+      <header class="article__header">
+        <p class="team__name">Lia</p>
+      </header>
+      <p class="article__teaser-text"></p>
+    </article>
+    <article class="team-member" id="nadine">
+      <header class="article__header">
+        <p class="team__name">Nadine</p>
+      </header>
+      <p class="article__teaser-text"></p>
+    </article>
+    <article class="team-member" id="janina">
+      <header class="article__header">
+        <p class="team__name">Janina</p>
+      </header>
+      <p class="article__teaser-text"></p>
+    </article>
+    <article class="team-member" id="axel">
+      <header class="article__header">
+        <p class="team__name">Axel</p>
+      </header>
+      <p class="article__teaser-text"></p>
+    </article>
+    <article class="team-member" id="andreas">
+      <header class="article__header">
+        <p class="team__name">Andreas</p>
+      </header>
+      <p class="article__teaser-text"></p>
+    </article>
+  </main>
 
 </html>
