--- a/team.html
+++ b/team.html
@@ -100,34 +100,34 @@
       <header class="article__header">
         <p class="team__name">Felix</p>
       </header>
-      <p class="article__teaser-text">Leidenschaftlicher Fotograph, begeisterter Kitesurfer – Felix kommt viel herum, insbesonders wenn er mit seinem selbstgebauten
+      <p class="article__teaser-text team__text">Leidenschaftlicher Fotograph, begeisterter Kitesurfer – Felix kommt viel herum, insbesonders wenn er mit seinem selbstgebauten
       VW-Bus auf Reisen geht.</p>
     </article>
     <article class="team-member" id="michaela">
       <header class="article__header">
         <p class="team__name">Michaela</p>
       </header>
-      <p class="article__teaser-text">Michaela ist unser nordischer Ruhepol. Auch wenn die Diskussion mal hitziger wird, Michaela behält die Ruhe weg. Sie ist
+      <p class="article__teaser-text team__text">Michaela ist unser nordischer Ruhepol. Auch wenn die Diskussion mal hitziger wird, Michaela behält die Ruhe weg. Sie ist
       immer freundlich und hilfsbereit - auf Michaela kann man zählen.</p>
     </article>
     <article class="team-member" id="viktoria">
       <header class="article__header">
         <p class="team__name">Viktoria</p>
       </header>
-      <p class="article__teaser-text">Viktoria eine sleeke Designerin. Alles muss minimalistisch und Gelb sein. FIKA!</p>
+      <p class="article__teaser-text team__text">Viktoria eine sleeke Designerin. Alles muss minimalistisch und Gelb sein. FIKA!</p>
     </article>
     <article class="team-member" id="max">
       <header class="article__header">
         <p class="team__name">Max</p>
       </header>
-      <p class="article__teaser-text">Seine Devise: Schlicht und viel Weißraum. Designtechnisch minimalistisch veranlagt, hat er einen großen Teil zum Grundgerüst
+      <p class="article__teaser-text team__text">Seine Devise: Schlicht und viel Weißraum. Designtechnisch minimalistisch veranlagt, hat er einen großen Teil zum Grundgerüst
       des Magazins beigetragen.</p>
     </article>
     <article class="team-member" id="jennie">
       <header class="article__header">
         <p class="team__name">Jennie</p>
       </header>
-      <p class="article__teaser-text">
+      <p class="article__teaser-text team__text">
          Elegant, trotzdem zeitgemäß und auf jeden Fall schick mag es Jennie. Sie hegt eine Vorliebe für Pastellfarben und schlichte
         Typografie und erfreut uns mit ihrem Interview einer Fotodesignerin. Privat heißt sie auf Reisen gerne das Fremde willkommen
         und findet, ob bei einem Schnack mit Freunden oder einer Präsentation in der Uni immer die richtigen Worte.
@@ -137,73 +137,73 @@
       <header class="article__header">
         <p class="team__name">Julien</p>
       </header>
-      <p class="article__teaser-text"></p>
+      <p class="article__teaser-text team__text"></p>
     </article>
     <article class="team-member" id="jonas">
       <header class="article__header">
         <p class="team__name">Jonas</p>
       </header>
-      <p class="article__teaser-text"></p>
+      <p class="article__teaser-text team__text"></p>
     </article>
     <article class="team-member" id="marvin">
       <header class="article__header">
         <p class="team__name">Marvin</p>
       </header>
-      <p class="article__teaser-text"></p>
+      <p class="article__teaser-text team__text"></p>
     </article>
     <article class="team-member" id="rieke">
       <header class="article__header">
         <p class="team__name">Rieke</p>
       </header>
-      <p class="article__teaser-text"></p>
+      <p class="article__teaser-text team__text"></p>
     </article>
     <article class="team-member" id="lena">
       <header class="article__header">
         <p class="team__name">Lena</p>
       </header>
-      <p class="article__teaser-text"></p>
+      <p class="article__teaser-text team__text"></p>
     </article>
     <article class="team-member" id="sevda">
       <header class="article__header">
         <p class="team__name">Sevda</p>
       </header>
-      <p class="article__teaser-text"></p>
+      <p class="article__teaser-text team__text"></p>
     </article>
     <article class="team-member" id="judith">
       <header class="article__header">
         <p class="team__name">Judith</p>
       </header>
-      <p class="article__teaser-text"></p>
+      <p class="article__teaser-text team__text"></p>
     </article>
     <article class="team-member" id="lia">
       <header class="article__header">
         <p class="team__name">Lia</p>
       </header>
-      <p class="article__teaser-text"></p>
+      <p class="article__teaser-text team__text"></p>
     </article>
     <article class="team-member" id="nadine">
       <header class="article__header">
         <p class="team__name">Nadine</p>
       </header>
-      <p class="article__teaser-text"></p>
+      <p class="article__teaser-text team__text"></p>
     </article>
     <article class="team-member" id="janina">
       <header class="article__header">
         <p class="team__name">Janina</p>
       </header>
-      <p class="article__teaser-text"></p>
+      <p class="article__teaser-text team__text"></p>
     </article>
     <article class="team-member" id="axel">
       <header class="article__header">
         <p class="team__name">Axel</p>
       </header>
-      <p class="article__teaser-text"></p>
+      <p class="article__teaser-text team__text"></p>
     </article>
     <article class="team-member" id="andreas">
       <header class="article__header">
         <p class="team__name">Andreas</p>
       </header>
-      <p class="article__teaser-text"></p>
+      <p class="article__teaser-text team__text"></p>
     </article>
   </main>
 
