--- a/team.html
+++ b/team.html
@@ -100,157 +100,197 @@
       <header class="article__header">
         <p class="team__name">Felix</p>
       </header>
-      <p class="article__teaser-text team__text">Leidenschaftlicher Fotograph, begeisterter Kitesurfer – Felix kommt viel herum,
-        insbesonders wenn er mit seinem selbstgebauten VW-Bus auf Reisen geht.</p>
+      <div class="team-member__inner">
+        <p class="article__teaser-text team__text">Leidenschaftlicher Fotograph, begeisterter Kitesurfer – Felix kommt viel
+          herum, insbesonders wenn er mit seinem selbstgebauten VW-Bus auf Reisen
+          geht.
+        </p>
+      </div>
     </article>
     <article class="team-member" id="michaela">
       <header class="article__header">
         <p class="team__name">Michaela</p>
       </header>
-      <p class="article__teaser-text team__text">Michaela ist unser nordischer Ruhepol. Auch wenn die Diskussion mal hitziger
-        wird, Michaela behält die Ruhe weg. Sie ist immer freundlich und hilfsbereit
-        - auf Michaela kann man zählen.</p>
+      <div class="team-member__inner">
+        <p class="article__teaser-text team__text">Michaela ist unser nordischer Ruhepol. Auch wenn die Diskussion mal hitziger
+          wird, Michaela behält die Ruhe weg. Sie ist immer freundlich und hilfsbereit
+          - auf Michaela kann man zählen.</p>
+      </div>
     </article>
     <article class="team-member" id="viktoria">
       <header class="article__header">
         <p class="team__name">Viktoria</p>
       </header>
-      <p class="article__teaser-text team__text">Viktoria eine sleeke Designerin. Alles muss minimalistisch und Gelb sein. FIKA!</p>
+      <div class="team-member__inner">
+        <p class="article__teaser-text team__text">Viktoria eine sleeke Designerin. Alles muss minimalistisch und Gelb sein.
+          FIKA!
+        </p>
+      </div>
     </article>
     <article class="team-member" id="max">
       <header class="article__header">
         <p class="team__name">Max</p>
       </header>
-      <p class="article__teaser-text team__text">Seine Devise: Schlicht und viel Weißraum. Designtechnisch minimalistisch veranlagt,
-        hat er einen großen Teil zum Grundgerüst des Magazins beigetragen.</p>
+      <div class="team-member__inner">
+        <p class="article__teaser-text team__text">Seine Devise: Schlicht und viel Weißraum. Designtechnisch minimalistisch
+          veranlagt, hat er einen großen Teil zum Grundgerüst des Magazins beigetragen.</p>
+      </div>
     </article>
     <article class="team-member" id="jennie">
       <header class="article__header">
         <p class="team__name">Jennie</p>
       </header>
-      <p class="article__teaser-text team__text">
-        Elegant, trotzdem zeitgemäß und auf jeden Fall schick mag es Jennie. Sie hegt eine
-        Vorliebe für Pastellfarben und schlichte Typografie und erfreut uns mit
-        ihrem Interview einer Fotodesignerin. Privat heißt sie auf Reisen gerne das
-        Fremde willkommen und findet, ob bei einem Schnack mit Freunden oder einer
-        Präsentation in der Uni immer die richtigen Worte.
-      </p>
+      <div class="team-member__inner">
+        <p class="article__teaser-text team__text">
+          Elegant, trotzdem zeitgemäß und auf jeden Fall schick mag es Jennie. Sie hegt eine
+          Vorliebe für Pastellfarben und schlichte Typografie und erfreut uns mit
+          ihrem Interview einer Fotodesignerin. Privat heißt sie auf Reisen gerne
+          das Fremde willkommen und findet, ob bei einem Schnack mit Freunden oder
+          einer Präsentation in der Uni immer die richtigen Worte.
+        </p>
+      </div>
     </article>
     <article class="team-member" id="julien">
       <header class="article__header">
         <p class="team__name">Julien</p>
       </header>
-      <p class="article__teaser-text team__text">
-        Julien Schnick ist ein aufstrebender Gestalter aus dem Bremerhavener Umland. Der
-        nette Typ von nebenan.
-      </p>
+      <div class="team-member__inner">
+        <p class="article__teaser-text team__text">
+          Julien Schnick ist ein aufstrebender Gestalter aus dem Bremerhavener Umland. Der
+          nette Typ von nebenan.
+        </p>
+      </div>
     </article>
     <article class="team-member" id="jonas">
       <header class="article__header">
         <p class="team__name">Jonas</p>
       </header>
-      <p class="article__teaser-text team__text">Ein waschechter Interaction Designer: Wenn er ein Interface gestaltet, dann
-        funktioniert‘s auch gleich im Browser. Wenn er einen funktionalen Prototypen
-        entwickelt, dann stimmt‘s auch ästhetisch.</p>
+      <div class="team-member__inner">
+        <p class="article__teaser-text team__text">Ein waschechter Interaction Designer: Wenn er ein Interface gestaltet, dann
+          funktioniert‘s auch gleich im Browser. Wenn er einen funktionalen Prototypen
+          entwickelt, dann stimmt‘s auch ästhetisch.</p>
+      </div>
     </article>
     <article class="team-member" id="marvin">
       <header class="article__header">
         <p class="team__name">Marvin</p>
       </header>
-      <p class="article__teaser-text team__text">
-        Wenn unser Kollege aus Lunestedt nicht gerade am Zocken oder Feiern ist, ist er dabei,
-        tolle digitale Layouts zu entwerfen oder großartige Texte abzuliefern. Mit
-        ausreichend gesammelten Erfahrungen träumt er davon, in Österreich mit seinem
-        Kumpel als Allround-Talent in Sachen Werbung selbstständig zu werden.
-      </p>
+      <div class="team-member__inner">
+        <p class="article__teaser-text team__text">
+          Wenn unser Kollege aus Lunestedt nicht gerade am Zocken oder Feiern ist, ist er dabei,
+          tolle digitale Layouts zu entwerfen oder großartige Texte abzuliefern.
+          Mit ausreichend gesammelten Erfahrungen träumt er davon, in Österreich
+          mit seinem Kumpel als Allround-Talent in Sachen Werbung selbstständig zu
+          werden.
+        </p>
+      </div>
     </article>
     <article class="team-member" id="rieke">
       <header class="article__header">
         <p class="team__name">Rieke</p>
       </header>
-      <p class="article__teaser-text team__text">
-        Gestatten? Lena. Sie spielt gern Fußball und ist Leadsängerin einer Band. Vor dem
-        Studium absolvierte sie bereits eine duale Ausbildung.
-      </p>
+      <div class="team-member__inner">
+        <p class="article__teaser-text team__text">
+          Gestatten? Lena. Sie spielt gern Fußball und ist Leadsängerin einer Band. Vor dem
+          Studium absolvierte sie bereits eine duale Ausbildung.
+        </p>
+      </div>
     </article>
     <article class="team-member" id="lena">
       <header class="article__header">
         <p class="team__name">Lena</p>
       </header>
-      <p class="article__teaser-text team__text">
-        Etymologisch leitet sich der Name »Rieke« vom altgriechischen »rikos« ab, das eigentlich
-        »Typographie« bedeutet. Genau hier findet sich Rieke auch als Person wieder.
-        Sie hat ein Gespür für Typographie und Gestaltung, welches ihr in ihrem
-        Berufsleben sicherlich eine große Hilfe sein wird.
-      </p>
+      <div class="team-member__inner">
+        <p class="article__teaser-text team__text">
+          Etymologisch leitet sich der Name »Rieke« vom altgriechischen »rikos« ab, das eigentlich
+          »Typographie« bedeutet. Genau hier findet sich Rieke auch als Person wieder.
+          Sie hat ein Gespür für Typographie und Gestaltung, welches ihr in ihrem
+          Berufsleben sicherlich eine große Hilfe sein wird.
+        </p>
+      </div>
     </article>
     <article class="team-member" id="sevda">
       <header class="article__header">
         <p class="team__name">Sevda</p>
       </header>
-      <p class="article__teaser-text team__text">
-        Eine Löwin, eine Künsterlin, eine Leseratte - Das ist Sevda. Ihr heiligster, materieller
-        Schatz ist ihre rote Gameboy Konsole von 1990. Zockt sie damit gerade nicht,
-        schaut sie alle möglichen Filme. Ob K-Dramen oder türkische Serien, ihre
-        Interessen sind breit gefächert.
-      </p>
+      <div class="team-member__inner">
+        <p class="article__teaser-text team__text">
+          Eine Löwin, eine Künsterlin, eine Leseratte - Das ist Sevda. Ihr heiligster, materieller
+          Schatz ist ihre rote Gameboy Konsole von 1990. Zockt sie damit gerade nicht,
+          schaut sie alle möglichen Filme. Ob K-Dramen oder türkische Serien, ihre
+          Interessen sind breit gefächert.
+        </p>
+      </div>
     </article>
     <article class="team-member" id="judith">
       <header class="article__header">
         <p class="team__name">Judith</p>
       </header>
-      <p class="article__teaser-text team__text">
-        Judith Beusing hat vieles zu bieten – Humor, Kreativität, aber vor allem: Vielseitigkeit.
-        Das zeigt sich schon an ihrem kuriosen Musikgeschmack, der von koreanischer
-        Popmusik bis zu Metal reicht und auch vor skurrilem Rave-Rap aus Südafrika
-        nicht Halt macht. Diese Vielseitigkeit zeigt sich auch in ihren Designarbeiten,
-        weshalb das Magazinprojekt wie für sie gemacht ist.
-      </p>
+      <div class="team-member__inner">
+        <p class="article__teaser-text team__text">
+          Judith Beusing hat vieles zu bieten – Humor, Kreativität, aber vor allem: Vielseitigkeit.
+          Das zeigt sich schon an ihrem kuriosen Musikgeschmack, der von koreanischer
+          Popmusik bis zu Metal reicht und auch vor skurrilem Rave-Rap aus Südafrika
+          nicht Halt macht. Diese Vielseitigkeit zeigt sich auch in ihren Designarbeiten,
+          weshalb das Magazinprojekt wie für sie gemacht ist.
+        </p>
+      </div>
     </article>
     <article class="team-member" id="lia">
       <header class="article__header">
         <p class="team__name">Lia</p>
       </header>
-      <p class="article__teaser-text team__text">
-        Professionelle Fotografin und Surfergirl in einem, bildet Lia den Freigeist des Teams.
-        Ihre Tierliebe prägt ihr dauerfröhliches Gemüt, vor allem in anstrengenden
-        Teamsitzungen. Im Magazin hat Lia die fotografische und die textliche Qualität
-        vorangetrieben.
-      </p>
+      <div class="team-member__inner">
+        <p class="article__teaser-text team__text">
+          Professionelle Fotografin und Surfergirl in einem, bildet Lia den Freigeist des Teams.
+          Ihre Tierliebe prägt ihr dauerfröhliches Gemüt, vor allem in anstrengenden
+          Teamsitzungen. Im Magazin hat Lia die fotografische und die textliche Qualität
+          vorangetrieben.
+        </p>
+      </div>
     </article>
     <article class="team-member" id="nadine">
       <header class="article__header">
         <p class="team__name">Nadine</p>
       </header>
-      <p class="article__teaser-text team__text">Hat Spaß am Schreiben, erkundet gerne Lost Places und liebt Abenteuer. Auf
-        ihrer To-Do-Liste darf nicht fehlen: Fallschirmspringen und das Burning Man
-        Festival in Nevada. Bad Vibes können ihr gerne fernbleiben.</p>
+      <div class="team-member__inner">
+        <p class="article__teaser-text team__text">Hat Spaß am Schreiben, erkundet gerne Lost Places und liebt Abenteuer. Auf
+          ihrer To-Do-Liste darf nicht fehlen: Fallschirmspringen und das Burning
+          Man Festival in Nevada. Bad Vibes können ihr gerne fernbleiben.</p>
+      </div>
     </article>
     <article class="team-member" id="janina">
       <header class="article__header">
         <p class="team__name">Janina</p>
       </header>
-      <p class="article__teaser-text team__text">Sie künstlerisch kreativ und musikalisch. Das Zeichnen ist ihre Leidenschaft.
-        Unser Team bereichert sie mit ihrer Organisationsfähigkeit.</p>
+      <div class="team-member__inner">
+        <p class="article__teaser-text team__text">Sie künstlerisch kreativ und musikalisch. Das Zeichnen ist ihre Leidenschaft.
+          Unser Team bereichert sie mit ihrer Organisationsfähigkeit.</p>
+      </div>
     </article>
     <article class="team-member" id="axel">
       <header class="article__header">
         <p class="team__name">Axel</p>
       </header>
-      <p class="article__teaser-text team__text">
-        Als Diplom Grafik Designer und gelernter Drucker zeigte Axel dem Team die professio-
-        nelle Seite der Magazinerstel- lung im Printbereich und un- terstützte die
-        Studierenden mit WItz und Spaß an der Sache bei ihren gestalterischen Umsetzungen.
-      </p>
+      <div class="team-member__inner">
+        <p class="article__teaser-text team__text">
+          Als Diplom Grafik Designer und gelernter Drucker zeigte Axel dem Team die professio-
+          nelle Seite der Magazinerstel- lung im Printbereich und un- terstützte
+          die Studierenden mit WItz und Spaß an der Sache bei ihren gestalterischen
+          Umsetzungen.
+        </p>
+      </div>
     </article>
     <article class="team-member" id="andreas">
       <header class="article__header">
         <p class="team__name">Andreas</p>
       </header>
-      <p class="article__teaser-text team__text">
-        Erster Satz über einen kompetenten Professor. Zweiter Satz über einen kreativen
-        Designer. Dritter Satz über einen coolen Typen.
-      </p>
+      <div class="team-member__inner">
+        <p class="article__teaser-text team__text">
+          Erster Satz über einen kompetenten Professor. Zweiter Satz über einen kreativen
+          Designer. Dritter Satz über einen coolen Typen.
+        </p>
+      </div>
     </article>
   </main>
 
