--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
             <a href="#" class="js-menu__item">Shop</a>
           </li>
           <li>
-            <a href="#" class="js-menu__item">Impressum/Datenschutz</a>
+            <a href="#" class="js-menu__item">Impressum</a>
+          </li>
+          <li>
+            <a href="#" class="js-menu__item">Datenschutz</a>
           </li>
         </ul>
       </nav>
