--- a/team.html
+++ b/team.html
@@ -20,7 +20,10 @@
             <a href="#" class="js-menu__item">Shop</a>
           </li>
           <li>
-            <a href="#" class="js-menu__item">Impressum/Datenschutz</a>
+            <a href="#" class="js-menu__item">Impressum</a>
+          </li>
+          <li>
+            <a href="#" class="js-menu__item">Datenschutz</a>
           </li>
         </ul>
       </nav>
@@ -191,8 +194,9 @@
       </header>
       <div class="team-member__inner">
         <p class="article__teaser-text team__text">
-          Gestatten? Lena. Sie spielt gern Fußball und ist Leadsängerin einer Band. Vor dem
-          Studium absolvierte sie bereits eine duale Ausbildung.
+           Etymologisch leitet sich der Name »Rieke« vom altgriechischen »rikos« ab, das eigentlich »Typographie« bedeutet. Genau hier
+          findet sich Rieke auch als Person wieder. Sie hat ein Gespür für Typographie und Gestaltung, welches ihr in ihrem Berufsleben
+          sicherlich eine große Hilfe sein wird.
         </p>
       </div>
     </article>
@@ -202,10 +206,8 @@
       </header>
       <div class="team-member__inner">
         <p class="article__teaser-text team__text">
-          Etymologisch leitet sich der Name »Rieke« vom altgriechischen »rikos« ab, das eigentlich
-          »Typographie« bedeutet. Genau hier findet sich Rieke auch als Person wieder.
-          Sie hat ein Gespür für Typographie und Gestaltung, welches ihr in ihrem
-          Berufsleben sicherlich eine große Hilfe sein wird.
+           Gestatten? Lena. Sie spielt gern Fußball und ist Leadsängerin einer Band. Vor dem Studium absolvierte sie bereits eine duale
+          Ausbildung.
         </p>
       </div>
     </article>
