--- a/index.html
+++ b/index.html
@@ -19,10 +19,13 @@
       <nav class="menu__nav">
         <ul class="menu__list">
           <li>
-            <a href="./team.html" class="js-menu__item">Das Team</a>
+            <a href="./index.html" class="js-menu__item">Magazin</a>
           </li>
           <li>
-            <a href="#" class="js-menu__item">Shop</a>
+            <a href="./team.html" class="js-menu__item">Team</a>
+          </li>
+          <li>
+            <a href="#" class="js-menu__item">Kontakt</a>
           </li>
           <li>
             <a href="#" class="js-menu__item">Impressum</a>
