--- a/team.html
+++ b/team.html
@@ -14,6 +14,9 @@
       <nav class="menu__nav">
         <ul class="menu__list">
           <li>
+            <a href="./index.html" class="js-menu__item">Magazin</a>
+          </li>
+          <li>
             <a href="./team.html" class="js-menu__item">Das Team</a>
           </li>
           <li>
